--- a/package.json
+++ b/package.json
@@ -24,18 +24,19 @@
   },
   "dependencies": {
     "cordova-android": "~6.4.0",
-    "cordova-ios": "^4.5.3",
+    "cordova-ios": "^4.5.5",
     "cordova-plugin-battery-status": "^1.2.5",
-    "cordova-plugin-ble-central": "^1.1.4",
+    "cordova-plugin-ble-central": "^1.2.2",
     "cordova-plugin-camera": "^3.0.0",
+    "cordova-plugin-cocoapod-support": "^1.6.0",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-device-motion": "^1.2.5",
     "cordova-plugin-dialogs": "^1.3.4",
     "cordova-plugin-file": "^5.0.0",
-    "cordova-plugin-file-transfer": "^1.7.0",
+    "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-geolocation": "^3.0.0",
-    "cordova-plugin-globalization": "^1.0.8",
+    "cordova-plugin-globalization": "^1.11.0",
     "cordova-plugin-inappbrowser": "^1.7.2",
     "cordova-plugin-insomnia": "^4.3.0",
     "cordova-plugin-media": "^4.0.0",
@@ -43,15 +44,15 @@
     "cordova-plugin-network-information": "^1.3.4",
     "cordova-plugin-screen-orientation": "^2.0.2",
     "cordova-plugin-splashscreen": "^4.1.0",
-    "cordova-plugin-statusbar": "^2.3.0",
+    "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-vibration": "^2.1.6",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-plugin-x-socialsharing": "^5.2.1",
-    "es6-promise-plugin": "^4.1.1",
+    "cordova-plugin-x-socialsharing": "^5.4.1",
+    "es6-promise-plugin": "^4.2.2",
     "phonegap-plugin-barcodescanner": "^6.0.8",
-    "phonegap-plugin-contentsync": "^1.4.1",
+    "phonegap-plugin-contentsync": "^1.4.2",
     "phonegap-plugin-mobile-accessibility": "^1.0.5",
-    "phonegap-plugin-push": "^2.1.2"
+    "phonegap-plugin-push": "^2.2.3"
   },
   "devDependencies": {
     "app-root-path": "1.0.0",
@@ -66,8 +67,7 @@
   },
   "cordova": {
     "platforms": [
-      "android",
-      "ios"
+      "android"
     ],
     "plugins": {
       "cordova-plugin-battery-status": {},
@@ -111,7 +111,8 @@
       "phonegap-plugin-push": {
         "FCM_VERSION": "11.0.1"
       },
-      "cordova-plugin-whitelist": {}
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-cocoapod-support": {}
     }
   }
 }
